@startuml DER

entity User {
    id BIGINT UNSIGNED <<PK>>
    firstName VARCHAR(255)
    lastName VARCHAR(255)
    birthdate DATE
    email VARCHAR(255) <<UK>>
    password VARCHAR(255)
    isAdmin BOOLEAN
    created_at DATE
    updated_at DATE
    --
}

entity Transaction {
    id BIGINT UNSIGNED <<PK>>
    user_id BIGINT UNSIGNED <<FK>>
    bill_id BIGINT UNSIGNED <<FK>> <<UK>>
    transaction_category_id BIGINT UNSIGNED <<FK>>
    amount DECIMAL(10, 2)
    type ENUM('income', 'expense')
    created_at DATE
    updated_at DATE
    --
}

entity Bill {
    id BIGINT UNSIGNED <<PK>>
    user_id BIGINT UNSIGNED <<FK>>
    title VARCHAR(255)
    description TEXT
    amount DECIMAL(10, 2)
    due_date DATE
    status ENUM('pending', 'paid', 'overdue')
    created_at DATE
    updated_at DATE
    --
}

entity Notification {
    id BIGINT UNSIGNED <<PK>>
    user_id BIGINT UNSIGNED <<FK>>
    title VARCHAR(255)
    message VARCHAR(255)
    read BOOLEAN
    created_at DATE
    updated_at DATE
    --
}

entity Task {
    id BIGINT UNSIGNED <<PK>>
    user_id BIGINT UNSIGNED <<FK>>
    task_category_id BIGINT UNSIGNED <<FK>>
    title VARCHAR(255)
    description TEXT
    due_date DATE
    status ENUM('pending', 'completed', 'failed')
    created_at DATE
    updated_at DATE
    --
}

entity TransactionCategory {
    id BIGINT UNSIGNED <<PK>>
    name VARCHAR(255)
    created_at DATE
    updated_at DATE
    --
}

entity TaskCategory {
    id BIGINT UNSIGNED <<PK>>
    name VARCHAR(255)
    created_at DATE
    updated_at DATE
    --
}


User ||--o| Transaction
User ||--o{ Bill
User ||--o{ Notification
User ||--o{ Task
TaskCategory ||--o{ Task
TransactionCategory ||--o{ Transaction
Bill |o--|| Transaction

@enduml
